--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "speaker": "^0.5.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
