--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "@types/crypto-js": "^4.1.1",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1",
     "speaker": "^0.5.4",
     "ws": "^8.13.0"
   },
