--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "9.1.6",
     "@nestjs/websockets": "9.1.6",
     "@types/crypto-js": "^4.1.1",
+    "audiobuffer-to-wav": "^1.0.0",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/audiobuffer-to-wav": "^1.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.0",
     "@types/node": "^16.0.0",
