--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "9.1.6",
     "@nestjs/websockets": "9.1.6",
+    "baidu-aip-sdk": "^4.16.10",
+    "hbs": "^4.2.0",
     "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
