--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "@nestjs/platform-socket.io": "9.1.6",
     "@nestjs/websockets": "9.1.6",
     "baidu-aip-sdk": "^4.16.10",
+    "fluent-ffmpeg": "^2.1.2",
     "hbs": "^4.2.0",
     "moment": "^2.29.4",
+    "nanoid": "^4.0.2",
+    "openai": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
+    "tunnel": "^0.0.6",
     "ws": "^8.13.0"
   },
   "devDependencies": {
@@ -42,9 +46,11 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/jest": "27.4.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/tunnel": "^0.0.3",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
