--- a/package.json
+++ b/package.json
@@ -27,16 +27,22 @@
     "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "9.1.6",
+    "@nestjs/sequelize": "^9.0.2",
     "@nestjs/websockets": "9.1.6",
     "baidu-aip-sdk": "^4.16.10",
+    "cache-manager": "^5.2.1",
+    "cache-manager-ioredis": "^2.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "hbs": "^4.2.0",
     "moment": "^2.29.4",
+    "mysql2": "^3.3.1",
     "nanoid": "^4.0.2",
     "openai": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sequelize": "^6.31.1",
+    "sequelize-typescript": "^2.1.5",
     "socket.io": "^4.6.1",
     "tunnel": "^0.0.6",
     "ws": "^8.13.0"
@@ -45,6 +51,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager-ioredis": "^2.0.3",
     "@types/express": "^4.17.13",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/jest": "27.4.0",
