--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "pinia": "^2.0.36",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.6.1",
