--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "element-plus": "^2.3.4",
     "pinia": "^2.0.36",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.6.1",
