--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "9.1.6",
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/websockets": "9.1.6",
+    "authing-js-sdk": "^4.23.44",
     "baidu-aip-sdk": "^4.16.10",
     "cache-manager": "^5.2.1",
     "cache-manager-ioredis": "^2.1.0",
