--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.0.36",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.6.1",
+    "static-web-proxy": "^1.3.7",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
