--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/event-emitter": "^1.4.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "9.1.6",
-    "@nestjs/sequelize": "^9.0.2",
-    "@nestjs/websockets": "9.1.6",
+    "@nestjs/cache-manager": "^2.2.2",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/platform-socket.io": "^10.4.1",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/testing": "^10.4.1",
+    "@nestjs/websockets": "^10.4.1",
     "authing-js-sdk": "^4.23.44",
     "baidu-aip-sdk": "^4.16.10",
     "cache-manager": "^5.2.1",
@@ -38,7 +42,7 @@
     "moment": "^2.29.4",
     "mysql2": "^3.3.1",
     "nanoid": "^4.0.2",
-    "openai": "^3.2.1",
+    "openai": "^4.61.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -49,9 +53,6 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
     "@types/cache-manager-ioredis": "^2.0.3",
     "@types/express": "^4.17.13",
     "@types/fluent-ffmpeg": "^2.1.21",
