--- a/package.json
+++ b/package.json
@@ -31,17 +31,22 @@
     "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/testing": "^10.4.1",
     "@nestjs/websockets": "^10.4.1",
     "authing-js-sdk": "^4.23.44",
     "baidu-aip-sdk": "^4.16.10",
     "cache-manager": "^5.2.1",
     "cache-manager-ioredis": "^2.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "exceljs": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "hbs": "^4.2.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql2": "^3.3.1",
-    "nanoid": "^4.0.2",
+    "nanoid": "3.3.4",
     "openai": "^4.61.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -50,7 +55,8 @@
     "sequelize-typescript": "^2.1.5",
     "socket.io": "^4.6.1",
     "tunnel": "^0.0.6",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cache-manager-ioredis": "^2.0.3",
