--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "fluent-ffmpeg": "^2.1.2",
     "hbs": "^4.2.0",
     "lodash": "^4.17.21",
+    "memfs": "^4.12.0",
     "moment": "^2.29.4",
     "mysql2": "^3.3.1",
     "nanoid": "3.3.4",
-    "openai": "^4.61.0",
+    "openai": "^4.67.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -55,6 +56,7 @@
     "sequelize-typescript": "^2.1.5",
     "socket.io": "^4.6.1",
     "tunnel": "^0.0.6",
+    "uuid": "^10.0.0",
     "ws": "^8.13.0",
     "xlsx": "^0.18.5"
   },
@@ -66,6 +68,7 @@
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@types/tunnel": "^0.0.3",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
