--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/platform-socket.io": "^10.4.1",
+    "@nestjs/platform-ws": "^10.4.4",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.0",
