--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/testing": "^10.4.1",
     "@nestjs/websockets": "^10.4.1",
     "authing-js-sdk": "^4.23.44",
+    "axios": "^1.7.7",
     "baidu-aip-sdk": "^4.16.10",
     "cache-manager": "^5.2.1",
     "cache-manager-ioredis": "^2.1.0",
