--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -31,8 +31,8 @@ services:
       - .env
     environment:
       - PORT=3000
-    # ports:
-    #   - 50001:50001
+    ports:
+      - 50004:3000
     command: >
       sh -c "
         npx ts-node dist/main.js
