--- a/front/.env.development
+++ b/front/.env.development
@@ -1,2 +1,3 @@
-VITE_APP_LOGIN_URL=http://localhost:50004
+VITE_APP_LOGIN_URL=http://localhost:49893
+VITE_APP_LOGIN_TITLE=kidtalk
 VITE_APP_AUTH_API=http://localhost:50004
