--- a/front/quickStart/nginx/site-enabled/default.conf
+++ b/front/quickStart/nginx/site-enabled/default.conf
@@ -1,19 +1,19 @@
 server {
     listen       80;
 
+    location /admin-panel {
+      try_files $uri /admin-panel/index.html;
+      root /usr/share/nginx/html;
+    }
+
     location /api/ {
      	proxy_pass http://api:3000/;
     }
 
-    location /socket.io {
+    location /ws/ {
      	proxy_pass http://api:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";      
     }
-
-    location / {
-      try_files $uri /index.html;
-      root /usr/share/nginx/html;
-    }    
 }
