--- a/front/.env.production
+++ b/front/.env.production
@@ -1,7 +1,7 @@
-# VITE_APP_LOGIN_URL=https://login.tltr.top
-# VITE_APP_LOGIN_TITLE=kidtalk
-# VITE_APP_AUTH_API=https://auth-api.tltr.top
-VITE_APP_LOGIN_URL=http://192.168.1.53:49893
+VITE_APP_LOGIN_URL=https://login.tltr.top
 VITE_APP_LOGIN_TITLE=kidtalk
-VITE_APP_AUTH_API=http://192.168.1.53:50004
+VITE_APP_AUTH_API=https://auth-api.tltr.top
+# VITE_APP_LOGIN_URL=http://192.168.1.53:49893
+# VITE_APP_LOGIN_TITLE=kidtalk
+# VITE_APP_AUTH_API=http://192.168.1.53:50004
 
