--- a/front/quickStart/nginx/site-enabled/default.conf
+++ b/front/quickStart/nginx/site-enabled/default.conf
@@ -10,10 +10,10 @@ server {
      	proxy_pass http://api:3000/;
     }
 
-    location /ws/ {
-     	proxy_pass http://api:3000;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";      
-    }
+    # location /ws/ {
+    #  	proxy_pass http://api:3000;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection "upgrade";      
+    # }
 }
