--- a/front/.env.development
+++ b/front/.env.development
@@ -1,3 +1,6 @@
-VITE_APP_LOGIN_URL=http://localhost:49893
+# VITE_APP_LOGIN_URL=http://localhost:49893
+# VITE_APP_LOGIN_TITLE=kidtalk
+# VITE_APP_AUTH_API=http://localhost:50004
+VITE_APP_LOGIN_URL=https://login.tltr.top
 VITE_APP_LOGIN_TITLE=kidtalk
-VITE_APP_AUTH_API=http://localhost:50004
+VITE_APP_AUTH_API=https://auth-api.tltr.top
